--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-                    <div class="menu">
+                    <div class="menu3">
                     <div class="cajaprincipal">
                        <span class="fontcenter">Get Your Next</span>
                        <img class= "ssst" src="Screenshot_127.jpg" alt="Screenshot_127">
@@ -31,7 +31,7 @@
                     <!-- segunda caja  -->
                     <div class="parte1">
                         <div class="1secc">
-                            <div class="img">
+                            <div class="prueba">
                                 <img src="" alt="">
                                <!-- IMAGENES DE POLLO --> 
                             </div>
